<resources>
    <string name="app_name">Meal-reciept-test-task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_registered_yet">Not Registered Yet?</string>
    <string name="register_now">Register Now</string>
    <string name="login">Login</string>
    <string name="cook_in_easy_way">Cook in easy way</string>
    <string name="khana_recipe">KHANA RECIPE</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="what_would_you_like_to_cook_today">What would you like to cook today?</string>
    <string name="welcome_denny">Welcome Denny</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="view_profile">View Profile</string>
    <string name="denny">Denny</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="today_s_fresh_recipe">Today’s Fresh Recipe</string>
    <string name="instructions">Instructions</string>
    <string name="ingradients">Ingradients</string>
</resources>