<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".ui.fragment.login.LoginFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chef" />

        <TextView
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/khana_recipe"
            android:textSize="36.93sp"
            android:textStyle="bold" />

        <TextView
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cook_in_easy_way"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="32.55sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/RegularTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="10dp"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/RegularTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/key"
            android:drawableEnd="@drawable/eye"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/btn_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25.5dp"
                android:src="@drawable/facebook" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_login"
            style="@style/RegularTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:background="@drawable/login_btn"
            android:gravity="center"
            android:paddingVertical="9.12dp"
            android:text="@string/login"
            android:textSize="24.8sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_yet"
            android:textSize="16.58sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_registr_now"
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/register_now"
            android:textColor="@color/colorPrimary"
            android:textSize="16.58sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>