<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"

        tools:context=".ui.fragment.home.HomeFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="38dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/notif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/frame1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="35dp"
            app:layout_constraintTop_toBottomOf="@id/top_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/RegularTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineHeight="29sp"
                    android:text="@string/welcome_denny"
                    android:textFontWeight="600"
                    android:textSize="22.69sp" />

                <TextView
                    style="@style/RegularTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_would_you_like_to_cook_today"
                    android:textColor="@color/colorPrimary"
                    android:textFontWeight="700"
                    android:textSize="22.69sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/passwordEditText"
                    style="@style/RegularTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login_btn"
                    android:backgroundTint="@color/white"
                    android:drawableEnd="@drawable/lupa"
                    android:drawablePadding="10dp"
                    android:hint="@string/search_recipe"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="12sp"
                    tools:ignore="TextFields" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:src="@drawable/sorting" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegularTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_s_fresh_recipe"
                    android:textFontWeight="600"
                    android:textSize="17.5sp" />
            </LinearLayout>




        </LinearLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/frame1"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_meal"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="2"
                    android:layout_marginHorizontal="24dp"
                    android:id="@+id/rv"
                    android:nestedScrollingEnabled="false"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6F999999"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar_home"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

        <TextView
            android:id="@+id/error_text_main"
            style="@style/RegularTextStyle"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:textColor="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
            tools:text="Nimadir xato ketdi!" />
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/nav_drawer_back"
        app:headerLayout="@layout/menu_header"
        app:itemHorizontalPadding="36dp"
        app:itemIconTint="@color/white"
        app:itemTextAppearance="@style/CustomNavigationViewItemText"
        app:itemTextColor="@color/white"
        app:itemVerticalPadding="20dp"
        app:menu="@menu/menu" />
</androidx.drawerlayout.widget.DrawerLayout>